--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DISCORD_TOKEN = MTI1ODQ1ODAyNTAxMDkyMTYwNA.GpnE4P.12uvSghWz7V7M8LWCpbTRKOT9BoHyWFmRW-2DY
+DISCORD_TOKEN = MTI1ODQ1ODAyNTAxMDkyMTYwNA.GrrHsV.befW6RnQgHJTyCYdtVQ8ft5U3EXgH2GHxQ8LYQ
