--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DISCORD_TOKEN = MTI1ODQ1ODAyNTAxMDkyMTYwNA.GrrHsV.befW6RnQgHJTyCYdtVQ8ft5U3EXgH2GHxQ8LYQ
+DISCORD_TOKEN = MTI1ODQ1ODAyNTAxMDkyMTYwNA.GrvSGB.-ffiullAPvjElAVVCFCGS7yWoSC_wYQbKLukG4
